# blogProjects

./: .gitignore  CMakeLists.txt  README.md
BitManipulation/: BitManipulation.cpp  BitManipulation.h  CMakeLists.txt  README.md  main.cpp
Factory/: CMakeLists.txt  Factory.h  concreteFactory.h
Mulinherit/: CMakeLists.txt  Person.cpp  Person.h  main.cpp
Singleton/: CMakeLists.txt
effectiveC++/: CMakeLists.txt  main.cpp  prue_virtual_class.h
examples/: CMakeLists.txt
examples/HWND_DC_And_RC/: CMakeLists.txt  Win32WindowsManager.h  main.cpp  triangle.h
extern_c/: CMakeLists.txt  KeyWordsExtern.cpp  TestExtern.h  extern_test.cpp  extern_test.h  main.cpp  test.h
smartPointer/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/BitManipulation/: BitManipulation.h  CMakeLists.txt  README.md  main.cpp
src/Factory/: CMakeLists.txt  Factory.h  Product.h  main.cpp
src/Mulinherit/: CMakeLists.txt  CMakeLists.txt.orig  Person.h  main.cpp
src/Singleton/: CMakeLists.txt  Singleton.h  main.cpp
src/effectiveC++/: CMakeLists.txt  main.cpp  prue_virtual_class.h
src/extern_c/: CMakeLists.txt  KeyWordsExtern.h  main.cpp
src/smartPointer/: CMakeLists.txt  main.cpp
